--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = { version = "0.7.12", features = ["compat"] }
 [dev-dependencies]
 dotenvy = "0.15.7"
+serial_test = "3.2.0"
