--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ chrono = ["dep:chrono", "diesel/chrono", "tiberius/chrono"]
 
 [workspace]
 exclude = ["tests"]
+
+[patch.crates-io]
+diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
