progress on query builder

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,1 @@
-CONNECTION_STRING="Server=tcp:localhost;Database=master;User Id=SA;Password=AStrongPassword;Encrypt=true;TrustServerCertificate=true;" 
+CONNECTION_STRING="Server=tcp:localhost;Database=master;User Id=SA;Password=AStrongPassword123!;Encrypt=true;TrustServerCertificate=true;" 
