--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -6,8 +6,13 @@ autotests = false
 publish = false
 
 [dependencies]
-diesel = { version = "2.2.4", default-features = false, features = ["chrono"] }
-diesel_migrations = "2.2.0"
+bigdecimal = "0.4.7"
+chrono = "0.4.39"
+diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", default-features = false, features = [
+    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
+    "chrono",
+] }
+diesel_migrations = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
 
 diesel_mssql = { path = "../" }
 dotenvy = "0.15.7"
