--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.38", optional = true }
-diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", default-features = false, features = [
+diesel = { version = "2.2.7", default_features = false, features = [
     "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
 ] }
 
