--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,11 +8,11 @@ publish = false
 [dependencies]
 bigdecimal = "0.4.7"
 chrono = "0.4.39"
-diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", default-features = false, features = [
+diesel = { version = "2.2.7", default_features = false, features = [
     "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
     "chrono",
 ] }
-diesel_migrations = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
+diesel_migrations = { version = "2.2.0" }
 
 diesel_mssql = { path = "../" }
 dotenvy = "0.15.7"
