--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,17 @@ license = "MIT OR Apache-2.0"
 description = "a SQL Server database adapter for Diesel based on Tiberius"
 readme = "README.md"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-chrono = { version = "0.4.38", optional = true }
-diesel = { version = "2.2.7", default_features = false, features = [
+chrono = { version = "0.4.40", optional = true }
+diesel = { version = "2.2.8", default-features = false, features = [
     "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
 ] }
 
 tiberius = { version = "0.12.3" }
-tokio = { version = "1.40.0", features = ["full"] }
-tokio-util = { version = "0.7.12", features = ["compat"] }
+tokio = { version = "1.4.1", features = ["full"] }
+tokio-util = { version = "0.7.14", features = ["compat"] }
 
 [dev-dependencies]
 dotenvy = "0.15.7"
@@ -25,4 +25,4 @@ default = ["chrono"]
 chrono = ["dep:chrono", "diesel/chrono", "tiberius/chrono"]
 
 [workspace]
-exclude = ["tests"]
+members = [".", "tests"]
